--- a/master.tex
+++ b/master.tex
@@ -27,7 +27,10 @@
 \title {Automated Learning}
 
 \begin{document}
+\graphicspath{{Graphics/}}
+
 \maketitle
+
 \tableofcontents
 
 \chapter{Introduction}
